# awt-chat-mcp-server

./: .gitignore  PROJECT_SUMMARY.md  QUICK_START.md  README.md  STREAMLIT_GUIDE.md  TUTORIAL.md  pyproject.toml  requirements.txt  run_streamlit.py  streamlit_app.py  streamlit_tools.py
data/: sample_data.csv  sample_data.json
examples/: client_example.py
src/: server.py
src/prompts/: __init__.py  analysis_prompts.py
src/resources/: __init__.py  file_resources.py
src/tools/: __init__.py  calc_tools.py  data_tools.py  file_tools.py  web_tools.py
tests/: test_tools.py
